Remove the annoying flickering while scrolling by changing nav's position from fixed to sticky and changing all elements in css reset to -webkit-transform-style: preserver-3d

--- a/css/reset.css
+++ b/css/reset.css
@@ -37,8 +37,13 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video{
-	-webkit-transform-style: preserve-3d;
 	-webkit-backface-visibility: hidden;
+	-webkit-transform-style: preserve-3d;
+}
+
+html {
+	-webkit-backface-visibility: hidden;
+	-webkit-transform-style: preserve-3d;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
