--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
+  position: sticky;
   top: 0;
   transform: translateZ(0);
   -webkit-transform: translateZ(0);
